cluster/beefeater/onlinelegitcasino.com/onlinelegitcasino-com-service-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlinelegitcasino-com
  namespace: affwebsites
  labels:
    app: onlinelegitcasino-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlinelegitcasino-com
  template:
    metadata:
      labels:
        app: onlinelegitcasino-com
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: onlinelegitcasino_com
        image: ghcr.io/ginbits/beefeater/onlinelegitcasino.com:master
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: onlinelegitcasino-com
  namespace: affwebsites
spec:
  selector:
    app: onlinelegitcasino-com
  ports:
  - name: http
    port: 8080
    protocol: TCP
  type: NodePort
